# media-server-rs

./: .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: history.rs  library.rs  media.rs  media_metadata.rs  mod.rs  peer.rs  prelude.rs  profile.rs  user_activity.rs
migration/src/: lib.rs  m20250426_143220_create_profiles_table.rs  m20250426_151614_create_library_table.rs  m20250426_151715_create_media_table.rs  m20250426_151732_create_history_table.rs  m20250426_152510_create_media_metadata.rs  m20250426_152523_create_user_activities.rs  m20250426_153350_create_foreign_keys_migration.rs  m20250426_155425_create_peers_table.rs
src/: db.rs  main.rs  mod.rs  state.rs
src/auth/: handlers.rs  models.rs  services.rs
src/errors/: mod.rs
src/media/: errors.rs  models.rs
src/media/services/: http_fallback.rs  metadata.rs  mod.rs  scanner.rs
src/routes/: mod.rs
