[package]
name = "smartinis_media_server"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]


[dependencies]
entity = { path = "./entity" }
migration = { path = "./migration" }
axum = "0.8.3"
mime_guess = "2.0.5"
sea-orm = { version = "1.1.10", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json", "with-uuid"]}
sea-orm-migration = "1.1.10"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.44.2"
tokio-util = "0.7.15"
tower = "0.5.2"
uuid = { version = "1.16.0", features = ["v4"]}
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
thiserror = "2.0.12"
chrono = "0.4.40"
dotenvy = "0.15.7"
